source/scan/Scanner.cpp
/* Generated by re2c 3.0 on Thu Jun  1 17:58:16 2023 */
#line 1 "/home/cadence/projects/Mint/source/scan/Scanner.re"
// Copyright (C) 2023 Cade Weinberg
//
// This file is part of Mint.
//
// Mint is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// Mint is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with Mint.  If not, see <http://www.gnu.org/licenses/>.

#include "scan/Scanner.hpp"

namespace mint {
#line 41 "/home/cadence/projects/Mint/source/scan/Scanner.re"

// NOLINTBEGIN(cppcoreguidelines-avoid-goto)
// #REASON: re2c uses gotos to implement the lexer and as all of the
// gotos are from generated code we are trusting re2c to
// use gotos in a safe and sane way here.
auto Scanner::scan() noexcept -> Token {
  while (true) {
    token = cursor;
    
#line 34 "/home/cadence/projects/Mint/source/scan/Scanner.cpp"
{
	char yych;
	unsigned int yyaccept = 0;
	yych = *cursor;
	switch (yych) {
		case '\t':
		case '\n':
		case ' ': goto yy2;
		case '!': goto yy4;
		case '%': goto yy6;
		case '&': goto yy7;
		case '(': goto yy8;
		case ')': goto yy9;
		case '*': goto yy10;
		case '+': goto yy11;
		case '-': goto yy12;
		case '/': goto yy13;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy14;
		case ';': goto yy16;
		case '<': goto yy17;
		case '=': goto yy19;
		case '>': goto yy21;
		case 'A':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'm':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy23;
		case 'B': goto yy26;
		case 'I': goto yy27;
		case 'N': goto yy28;
		case 'f': goto yy29;
		case 'l': goto yy30;
		case 'n': goto yy31;
		case 't': goto yy32;
		case '|': goto yy33;
		default:
			if (end <= cursor) goto yy73;
			goto yy1;
	}
yy1:
	++cursor;
#line 83 "/home/cadence/projects/Mint/source/scan/Scanner.re"
	{ UpdateLocation(); return Token::Error; }
#line 128 "/home/cadence/projects/Mint/source/scan/Scanner.cpp"
yy2:
	yych = *++cursor;
	switch (yych) {
		case '\t':
		case '\n':
		case ' ': goto yy2;
		default: goto yy3;
	}
yy3:
#line 82 "/home/cadence/projects/Mint/source/scan/Scanner.re"
	{ UpdateLocation(); continue; }
#line 140 "/home/cadence/projects/Mint/source/scan/Scanner.cpp"
yy4:
	yych = *++cursor;
	switch (yych) {
		case '=': goto yy34;
		default: goto yy5;
	}
yy5:
#line 69 "/home/cadence/projects/Mint/source/scan/Scanner.re"
	{ UpdateLocation(); return Token::Not; }
#line 150 "/home/cadence/projects/Mint/source/scan/Scanner.cpp"
yy6:
	++cursor;
#line 68 "/home/cadence/projects/Mint/source/scan/Scanner.re"
	{ UpdateLocation(); return Token::Modulo; }
#line 155 "/home/cadence/projects/Mint/source/scan/Scanner.cpp"
yy7:
	++cursor;
#line 70 "/home/cadence/projects/Mint/source/scan/Scanner.re"
	{ UpdateLocation(); return Token::And; }
#line 160 "/home/cadence/projects/Mint/source/scan/Scanner.cpp"
yy8:
	++cursor;
#line 61 "/home/cadence/projects/Mint/source/scan/Scanner.re"
	{ UpdateLocation(); return Token::LParen; }
#line 165 "/home/cadence/projects/Mint/source/scan/Scanner.cpp"
yy9:
	++cursor;
#line 62 "/home/cadence/projects/Mint/source/scan/Scanner.re"
	{ UpdateLocation(); return Token::RParen; }
#line 170 "/home/cadence/projects/Mint/source/scan/Scanner.cpp"
yy10:
	++cursor;
#line 66 "/home/cadence/projects/Mint/source/scan/Scanner.re"
	{ UpdateLocation(); return Token::Star; }
#line 175 "/home/cadence/projects/Mint/source/scan/Scanner.cpp"
yy11:
	++cursor;
#line 64 "/home/cadence/projects/Mint/source/scan/Scanner.re"
	{ UpdateLocation(); return Token::Plus; }
#line 180 "/home/cadence/projects/Mint/source/scan/Scanner.cpp"
yy12:
	++cursor;
#line 65 "/home/cadence/projects/Mint/source/scan/Scanner.re"
	{ UpdateLocation(); return Token::Minus; }
#line 185 "/home/cadence/projects/Mint/source/scan/Scanner.cpp"
yy13:
	++cursor;
#line 67 "/home/cadence/projects/Mint/source/scan/Scanner.re"
	{ UpdateLocation(); return Token::Divide; }
#line 190 "/home/cadence/projects/Mint/source/scan/Scanner.cpp"
yy14:
	yych = *++cursor;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy14;
		default: goto yy15;
	}
yy15:
#line 80 "/home/cadence/projects/Mint/source/scan/Scanner.re"
	{ UpdateLocation(); return Token::Integer; }
#line 209 "/home/cadence/projects/Mint/source/scan/Scanner.cpp"
yy16:
	++cursor;
#line 60 "/home/cadence/projects/Mint/source/scan/Scanner.re"
	{ UpdateLocation(); return Token::Semicolon; }
#line 214 "/home/cadence/projects/Mint/source/scan/Scanner.cpp"
yy17:
	yych = *++cursor;
	switch (yych) {
		case '=': goto yy35;
		default: goto yy18;
	}
yy18:
#line 72 "/home/cadence/projects/Mint/source/scan/Scanner.re"
	{ UpdateLocation(); return Token::LessThan; }
#line 224 "/home/cadence/projects/Mint/source/scan/Scanner.cpp"
yy19:
	yych = *++cursor;
	switch (yych) {
		case '=': goto yy36;
		default: goto yy20;
	}
yy20:
#line 59 "/home/cadence/projects/Mint/source/scan/Scanner.re"
	{ UpdateLocation(); return Token::Equal; }
#line 234 "/home/cadence/projects/Mint/source/scan/Scanner.cpp"
yy21:
	yych = *++cursor;
	switch (yych) {
		case '=': goto yy37;
		default: goto yy22;
	}
yy22:
#line 76 "/home/cadence/projects/Mint/source/scan/Scanner.re"
	{ UpdateLocation(); return Token::GreaterThan; }
#line 244 "/home/cadence/projects/Mint/source/scan/Scanner.cpp"
yy23:
	yyaccept = 0;
	yych = *(marker = ++cursor);
yy24:
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy23;
		case ':': goto yy38;
		default: goto yy25;
	}
yy25:
#line 79 "/home/cadence/projects/Mint/source/scan/Scanner.re"
	{ UpdateLocation(); return Token::Identifier; }
#line 319 "/home/cadence/projects/Mint/source/scan/Scanner.cpp"
yy26:
	yyaccept = 0;
	yych = *(marker = ++cursor);
	switch (yych) {
		case 0x00: goto yy25;
		case 'o': goto yy40;
		default: goto yy24;
	}
yy27:
	yyaccept = 0;
	yych = *(marker = ++cursor);
	switch (yych) {
		case 0x00: goto yy25;
		case 'n': goto yy41;
		default: goto yy24;
	}
yy28:
	yyaccept = 0;
	yych = *(marker = ++cursor);
	switch (yych) {
		case 0x00: goto yy25;
		case 'i': goto yy42;
		default: goto yy24;
	}
yy29:
	yyaccept = 0;
	yych = *(marker = ++cursor);
	switch (yych) {
		case 0x00: goto yy25;
		case 'a': goto yy43;
		default: goto yy24;
	}
yy30:
	yyaccept = 0;
	yych = *(marker = ++cursor);
	switch (yych) {
		case 0x00: goto yy25;
		case 'e': goto yy44;
		default: goto yy24;
	}
yy31:
	yyaccept = 0;
	yych = *(marker = ++cursor);
	switch (yych) {
		case 0x00: goto yy25;
		case 'i': goto yy45;
		default: goto yy24;
	}
yy32:
	yyaccept = 0;
	yych = *(marker = ++cursor);
	switch (yych) {
		case 0x00: goto yy25;
		case 'r': goto yy46;
		default: goto yy24;
	}
yy33:
	++cursor;
#line 71 "/home/cadence/projects/Mint/source/scan/Scanner.re"
	{ UpdateLocation(); return Token::Or; }
#line 380 "/home/cadence/projects/Mint/source/scan/Scanner.cpp"
yy34:
	++cursor;
#line 75 "/home/cadence/projects/Mint/source/scan/Scanner.re"
	{ UpdateLocation(); return Token::NotEqual; }
#line 385 "/home/cadence/projects/Mint/source/scan/Scanner.cpp"
yy35:
	++cursor;
#line 73 "/home/cadence/projects/Mint/source/scan/Scanner.re"
	{ UpdateLocation(); return Token::LessThanOrEqual; }
#line 390 "/home/cadence/projects/Mint/source/scan/Scanner.cpp"
yy36:
	++cursor;
#line 74 "/home/cadence/projects/Mint/source/scan/Scanner.re"
	{ UpdateLocation(); return Token::EqualEqual; }
#line 395 "/home/cadence/projects/Mint/source/scan/Scanner.cpp"
yy37:
	++cursor;
#line 77 "/home/cadence/projects/Mint/source/scan/Scanner.re"
	{ UpdateLocation(); return Token::GreaterThanOrEqual; }
#line 400 "/home/cadence/projects/Mint/source/scan/Scanner.cpp"
yy38:
	yych = *++cursor;
	switch (yych) {
		case ':': goto yy47;
		default: goto yy39;
	}
yy39:
	cursor = marker;
	switch (yyaccept) {
		case 0: goto yy25;
		case 1: goto yy51;
		case 2: goto yy54;
		case 3: goto yy56;
		case 4: goto yy62;
		case 5: goto yy66;
		case 6: goto yy70;
		default: goto yy72;
	}
yy40:
	yyaccept = 0;
	yych = *(marker = ++cursor);
	switch (yych) {
		case 0x00: goto yy25;
		case 'o': goto yy48;
		default: goto yy24;
	}
yy41:
	yyaccept = 0;
	yych = *(marker = ++cursor);
	switch (yych) {
		case 0x00: goto yy25;
		case 't': goto yy49;
		default: goto yy24;
	}
yy42:
	yyaccept = 0;
	yych = *(marker = ++cursor);
	switch (yych) {
		case 0x00: goto yy25;
		case 'l': goto yy50;
		default: goto yy24;
	}
yy43:
	yyaccept = 0;
	yych = *(marker = ++cursor);
	switch (yych) {
		case 0x00: goto yy25;
		case 'l': goto yy52;
		default: goto yy24;
	}
yy44:
	yyaccept = 0;
	yych = *(marker = ++cursor);
	switch (yych) {
		case 0x00: goto yy25;
		case 't': goto yy53;
		default: goto yy24;
	}
yy45:
	yyaccept = 0;
	yych = *(marker = ++cursor);
	switch (yych) {
		case 0x00: goto yy25;
		case 'l': goto yy55;
		default: goto yy24;
	}
yy46:
	yyaccept = 0;
	yych = *(marker = ++cursor);
	switch (yych) {
		case 0x00: goto yy25;
		case 'u': goto yy57;
		default: goto yy24;
	}
yy47:
	yych = *++cursor;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy23;
		default: goto yy39;
	}
yy48:
	yyaccept = 0;
	yych = *(marker = ++cursor);
	switch (yych) {
		case 0x00: goto yy25;
		case 'l': goto yy58;
		default: goto yy24;
	}
yy49:
	yyaccept = 0;
	yych = *(marker = ++cursor);
	switch (yych) {
		case 0x00: goto yy25;
		case 'e': goto yy59;
		default: goto yy24;
	}
yy50:
	yyaccept = 1;
	yych = *(marker = ++cursor);
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case ':':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy24;
		default: goto yy51;
	}
yy51:
#line 51 "/home/cadence/projects/Mint/source/scan/Scanner.re"
	{ UpdateLocation(); return Token::NilType; }
#line 632 "/home/cadence/projects/Mint/source/scan/Scanner.cpp"
yy52:
	yyaccept = 0;
	yych = *(marker = ++cursor);
	switch (yych) {
		case 0x00: goto yy25;
		case 's': goto yy60;
		default: goto yy24;
	}
yy53:
	yyaccept = 2;
	yych = *(marker = ++cursor);
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case ':':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy24;
		default: goto yy54;
	}
yy54:
#line 57 "/home/cadence/projects/Mint/source/scan/Scanner.re"
	{ UpdateLocation(); return Token::Let; }
#line 714 "/home/cadence/projects/Mint/source/scan/Scanner.cpp"
yy55:
	yyaccept = 3;
	yych = *(marker = ++cursor);
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case ':':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy24;
		default: goto yy56;
	}
yy56:
#line 50 "/home/cadence/projects/Mint/source/scan/Scanner.re"
	{ UpdateLocation(); return Token::Nil; }
#line 788 "/home/cadence/projects/Mint/source/scan/Scanner.cpp"
yy57:
	yyaccept = 0;
	yych = *(marker = ++cursor);
	switch (yych) {
		case 0x00: goto yy25;
		case 'e': goto yy61;
		default: goto yy24;
	}
yy58:
	yyaccept = 0;
	yych = *(marker = ++cursor);
	switch (yych) {
		case 0x00: goto yy25;
		case 'e': goto yy63;
		default: goto yy24;
	}
yy59:
	yyaccept = 0;
	yych = *(marker = ++cursor);
	switch (yych) {
		case 0x00: goto yy25;
		case 'g': goto yy64;
		default: goto yy24;
	}
yy60:
	yyaccept = 0;
	yych = *(marker = ++cursor);
	switch (yych) {
		case 0x00: goto yy25;
		case 'e': goto yy65;
		default: goto yy24;
	}
yy61:
	yyaccept = 4;
	yych = *(marker = ++cursor);
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case ':':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy24;
		default: goto yy62;
	}
yy62:
#line 53 "/home/cadence/projects/Mint/source/scan/Scanner.re"
	{ UpdateLocation(); return Token::True; }
#line 894 "/home/cadence/projects/Mint/source/scan/Scanner.cpp"
yy63:
	yyaccept = 0;
	yych = *(marker = ++cursor);
	switch (yych) {
		case 0x00: goto yy25;
		case 'a': goto yy67;
		default: goto yy24;
	}
yy64:
	yyaccept = 0;
	yych = *(marker = ++cursor);
	switch (yych) {
		case 0x00: goto yy25;
		case 'e': goto yy68;
		default: goto yy24;
	}
yy65:
	yyaccept = 5;
	yych = *(marker = ++cursor);
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case ':':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy24;
		default: goto yy66;
	}
yy66:
#line 54 "/home/cadence/projects/Mint/source/scan/Scanner.re"
	{ UpdateLocation(); return Token::False; }
#line 984 "/home/cadence/projects/Mint/source/scan/Scanner.cpp"
yy67:
	yyaccept = 0;
	yych = *(marker = ++cursor);
	switch (yych) {
		case 0x00: goto yy25;
		case 'n': goto yy69;
		default: goto yy24;
	}
yy68:
	yyaccept = 0;
	yych = *(marker = ++cursor);
	switch (yych) {
		case 0x00: goto yy25;
		case 'r': goto yy71;
		default: goto yy24;
	}
yy69:
	yyaccept = 6;
	yych = *(marker = ++cursor);
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case ':':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy24;
		default: goto yy70;
	}
yy70:
#line 55 "/home/cadence/projects/Mint/source/scan/Scanner.re"
	{ UpdateLocation(); return Token::BooleanType; }
#line 1074 "/home/cadence/projects/Mint/source/scan/Scanner.cpp"
yy71:
	yyaccept = 7;
	yych = *(marker = ++cursor);
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case ':':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy24;
		default: goto yy72;
	}
yy72:
#line 52 "/home/cadence/projects/Mint/source/scan/Scanner.re"
	{ UpdateLocation(); return Token::IntegerType; }
#line 1148 "/home/cadence/projects/Mint/source/scan/Scanner.cpp"
yy73:
#line 84 "/home/cadence/projects/Mint/source/scan/Scanner.re"
	{ UpdateLocation(); return Token::End; }
#line 1152 "/home/cadence/projects/Mint/source/scan/Scanner.cpp"
}
#line 85 "/home/cadence/projects/Mint/source/scan/Scanner.re"

  }
}
// NOLINTEND(cppcoreguidelines-avoid-goto)
} // namespace mint